[BP] pdf - normalize URL before openStream() (#4778)
We encountered the issue on geOrchestra, following an update of
spring-security in our proxy placed in front of geonetwork.

Since spring-security 4.2.4, a stricter filter than the default one
is defined by default, see the following class:

https://docs.spring.io/spring-security/site/docs/4.2.15.RELEASE/apidocs/org/springframework/security/web/firewall/StrictHttpFirewall.html

```
Rejects URLs that are not normalized to avoid bypassing security
constraints. There is no way to disable this as it is considered
extremely risky to disable this constraint. A few options to allow this
behavior is to normalize the request prior to the firewall or using
DefaultHttpFirewall instead. Please keep in mind that normalizing the
request is fragile and why requests are rejected rather than normalized.
```

When asking for a PDF export of a MD, some of the URLs pointing to
e.g. images resources are passed to the PDF formatter which then tries
to fetch them using URL.openStream(). These urls are not necessarily
"normalized" (e.g. path is not recalculated to remove the "../" & "./").

This PR suggests to normalize the URLs before trying to fetch the remote
resource.

Please note that this is currently not necessary, given the
spring-security version in use (3.2.0 in the parent pom), but could
become an issue in the future in case of upgrade.

Also changing the log level on the logger call to debug (this does not
seem to be an error, since the message is more for information purposes).